# stocks-forecasting

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
configs/: config.example.yaml  config.smoke.yaml
notebooks/: train_predict_plot.ipynb
src/stocks_forecasting/: __init__.py  __main__.py  cli.py
src/stocks_forecasting/artifacts/: __init__.py  bundle.py
src/stocks_forecasting/calendars/: __init__.py  base.py  factory.py  naive_weekdays.py  python_exchange_calendars.py
src/stocks_forecasting/config/: __init__.py  load.py  models.py
src/stocks_forecasting/dataset/: __init__.py  metadata.py  prepare_symbol.py  splits.py  time_splits.py  universe.py
src/stocks_forecasting/db/: __init__.py  postgres.py
src/stocks_forecasting/features/: __init__.py  known_future.py  target.py  technical_indicators.py
src/stocks_forecasting/metrics/: __init__.py  quantile.py
src/stocks_forecasting/training/: __init__.py  train_tft.py
tests/: conftest.py  test_config_models.py  test_dataset_splits.py  test_exchange_calendars_provider.py  test_known_future.py  test_metrics_quantile.py  test_prepare_symbol.py  test_target.py  test_technical_indicators.py  test_time_splits.py
